--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>重大新闻</title>
+    <title>About Myself</title>
   </head>
+  <h1>这是我做的第一个博客，欢迎大家来访</h1>
  <script>
   	var _mtac = {};
   	(function() {
