--- a/Study/HTML.html
+++ b/Study/HTML.html
@@ -1,5 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body></body>
+    <head>
+<meta charset="utf-8">
+       <link href="style.css" rel="stylesheet" />
+<title>学习</title>
+   </head>
+   <body>
+   <h1>这是一个标题</h1>
+   <h2>这是一个标题</h2>
+   <h3>这是一个标题</h3>
+   <!--<h1> - <h6>-->
+   <p>注释: 浏览器会自动地在标题的前后添加空行。</p>
+   <p>内容</p>
+   <hr>
+   <p>水平线</p>
+   <a href="https://www.baidu.com">连接标题</a>
+   <img loading="picture" src="location" width="300" height="300" />
+   <br>换行？
+   <!-- 这是一个注释 -->
+   <a href="https://www.runoob.com/tags/html-reference.html">属性查询</a>
+
+   <!-- 定义元素样式变量-->
+   <script>
+    document.createElement("myHero")
+   </script>
+   <style>
+   myHero {
+    display: block;
+    background-color: #ddd;
+    padding: 50px;
+    font-size: 30px;
+   }
+   </style>
+   <myHero>我的第一个新元素</myHero>
+    <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+   <p style="font-family:arial;color:red;font-size:20px;">一个段落。</p>
+</body>
 </html>
